Add training notebook Add phylogeny criterions Update CIFAR abilities MISC

--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_curated4_Easy50_studyGradients\"\n",
+    "experimentName = \"CIFAR_phylogeny_8_4_0_KLDiv\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -40,33 +40,35 @@
     "# Do not change the order!\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
-    "    \"image_path\": \"Curated4/Easy_50\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
+    "    \"image_path\": \"cifar-100-python\", # \"cifar-100-python\", \"Curated4/Easy_50\"\n",
     "    \"suffix\":None, #\"curated_30_50\", #  None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
-    "    \"img_res\": 448, \n",
-    "    \"augmented\": True,\n",
+    "    \"img_res\": 32, #32, 448\n",
+    "    \"augmented\": False,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 16, # Bigger is more stable (256)\n",
-    "    \"learning_rate\":0.0001, # 0.00005\n",
-    "    \"numOfTrials\":2,\n",
+    "    \"batchSize\": 128, # Bigger is more stable (256)\n",
+    "    \"learning_rate\":0.00005, # 0.00005\n",
+    "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"HGNN_add\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
+    "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
     "    \"lambda\": 0.01,\n",
     "    \"unsupervisedOnTest\": False,\n",
-    "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
+    "    \"tl_model\": \"CIFAR\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "    \n",
-    "    \"adaptive_smoothing\": True,\n",
+    "    \"adaptive_smoothing\": False,\n",
     "    \"adaptive_lambda\": 0.015, #optimized for time\n",
     "    \"adaptive_alpha\": 0.8, #optimized for time\n",
     "    \n",
     "    \"noSpeciesBackprop\": False, \n",
+    "\n",
+    "    \"phylogeny_loss\": False, \n",
     "}\n",
     "\n",
-    "experimentsPath=\"/raid/elhamod/Fish/experiments/\"\n",
-    "dataPath=\"/raid/elhamod/Fish\""
+    "experimentsPath=\"/raid/elhamod/CIFAR_HGNN/experiments/\"\n",
+    "dataPath=\"/raid/elhamod/\" #\"/raid/elhamod/Fish\" \"/raid/elhamod/\""
    ]
   },
   {
@@ -84,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/biology_paper_curated4_Easy50_studyGradients/params.json'"
+       "'/raid/elhamod/CIFAR_HGNN/experiments/CIFAR_phylogeny_8_4_0_KLDiv/params.json'"
       ]
      },
      "execution_count": 3,
@@ -110,12 +112,37 @@
     "    \n",
     "#      {\"modelType\": 'DISCO'}, ## BB\n",
     "#      {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.1},\n",
-    "     { \"modelType\": 'HGNN_add', \"fc_layers\": 1},\n",
-    "     { \"modelType\": 'BB', \"fc_layers\": 1},\n",
-    "     { \"modelType\": 'BB', \"fc_layers\": 2}\n",
+    "#      { \"modelType\": 'HGNN_add', \"fc_layers\": 1},\n",
+    "#      { \"modelType\": 'BB', \"fc_layers\": 1},\n",
+    "#      { \"modelType\": 'BB', \"fc_layers\": 2}\n",
+    "#     {'batchSize':16, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':16, 'learning_rate': 0.00005},\n",
+    "#     {'batchSize':16, 'learning_rate': 0.00001},\n",
+    "#     {'batchSize':16, 'learning_rate': 0.000005},\n",
+    "#     {'batchSize':8, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':8, 'learning_rate': 0.00005},\n",
+    "#     {'batchSize':8, 'learning_rate': 0.00001},\n",
+    "#     {'batchSize':8, 'learning_rate': 0.000005},\n",
+    "#     {'batchSize':32, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':32, 'learning_rate': 0.00005},\n",
+    "#     {'batchSize':32, 'learning_rate': 0.00001},\n",
+    "#     {'batchSize':32, 'learning_rate': 0.000005}\n",
+    "#     {'batchSize':64, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':128, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':64, 'learning_rate': 0.00005},\n",
+    "#     {'batchSize':128, 'learning_rate': 0.00005},\n",
+    "#     {'batchSize':8, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':16, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':8, 'learning_rate': 0.00005},\n",
+    "#     {'batchSize':16, 'learning_rate': 0.00005},\n",
+    "#     {'batchSize':32, 'learning_rate': 0.0001},\n",
+    "#     {'batchSize':32, 'learning_rate': 0.00005},\n",
     "#     {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.01},\n",
     "#      {\"modelType\": 'BB'},\n",
     "#      {\"modelType\": 'DSN'},\n",
+    "#     {\"phylogeny_loss\": False},\n",
+    "#     {\"phylogeny_loss\": \"MSE\"},\n",
+    "    {\"phylogeny_loss\": \"KLDiv\"},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.7},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.5},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.1},\n",
@@ -155,12 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 0.0001, 'numOfTrials': 2, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False}\n",
-      "models/ec39cf27961d88407a2576ede1bf4c58ae9d28241c5f43e45ce1164d\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 0.0001, 'numOfTrials': 2, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False}\n",
-      "models/43cdc6aff3a7bb28d399a67febca64820d5fd2c77ba7fbb74c2f3c11\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 0.0001, 'numOfTrials': 2, 'fc_layers': 2, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False}\n",
-      "models/6217abc41cf4519c1dccbf864ee1a5d9dd661979902dc96031acd5ed\n"
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False, 'phylogeny_loss': 'KLDiv', 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/843245f82691b9ea95cc530cd93dd7d6b3a46cacb99e0ce433b37eab\n"
      ]
     }
    ],
