--- a/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"CIFAR_phylogeny_tripletloss_new_archi_full\"\n",
+    "experimentName = \"Fish_phylogeny_tripletloss_new_archi_full2\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -40,24 +40,24 @@
     "# Do not change the order!\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
-    "    \"image_path\": \"cifar-100-python\", # \"cifar-100-python\", \"Curated4/Easy_50\"\n",
-    "    \"suffix\":None, #\"curated_30_50\", #  None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"image_path\": \"Curated4/Easy_50\", # \"cifar-100-python\", \"Curated4/Easy_50\"\n",
+    "    \"suffix\":None, \n",
     "    \n",
     "    # dataset\n",
-    "    \"img_res\": 32, #32, 448\n",
-    "    \"augmented\": False,\n",
+    "    \"img_res\": 224, #32, 448\n",
+    "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, #128, # Bigger is more stable (256)\n",
-    "    \"learning_rate\": 0.05, #0.0003, # 0.00005\n",
+    "    \"batchSize\": 64, #128, # Bigger is more stable (256)\n",
+    "    \"learning_rate\": 0.01, #0.0003, # 0.00005\n",
     "    \"numOfTrials\":1,\n",
     "    \"fc_layers\": 1,\n",
     "    \n",
     "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
     "    \n",
-    "    \"lambda\": 10,#0.01,\n",
+    "    \"lambda\": 0,#0.01,\n",
     "\n",
-    "    \"tl_model\": \"CIFAR\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
+    "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "    \n",
     "    \"adaptive_smoothing\": True,\n",
@@ -65,7 +65,7 @@
     "    \"adaptive_alpha\": 0.1,#0.8, #optimized for time\n",
     "    \n",
     "    \"tripletEnabled\": True,\n",
-    "    \"tripletSamples\": 3,\n",
+    "    \"tripletSamples\": 2,\n",
     "    \"tripletSelector\": \"semihard\",\n",
     "    \"tripletMargin\": 0.2, #0.2\n",
     "\n",
@@ -73,8 +73,8 @@
     "    \"phylogeny_loss\": False, \n",
     "}\n",
     "\n",
-    "experimentsPath=\"/raid/elhamod/CIFAR_HGNN/experiments/\"\n",
-    "dataPath=\"/raid/elhamod/\" #\"/raid/elhamod/Fish\" \"/raid/elhamod/\""
+    "experimentsPath= \"/raid/elhamod/Fish/experiments/\" # \"/raid/elhamod/CIFAR_HGNN/experiments/\"\n",
+    "dataPath=\"/raid/elhamod/Fish\" #\"/raid/elhamod/Fish\" \"/raid/elhamod/\""
    ]
   },
   {
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/CIFAR_HGNN/experiments/CIFAR_phylogeny_tripletloss_new_archi_lr0.05/params.json'"
+       "'/raid/elhamod/Fish/experiments/Fish_phylogeny_tripletloss_new_archi_full/params.json'"
       ]
      },
      "execution_count": 3,
@@ -147,18 +147,18 @@
     "#     {'batchSize':32, 'learning_rate': 0.0001},\n",
     "#     {'batchSize':32, 'learning_rate': 0.00005},\n",
     "#     {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.01},\n",
-    "#      {\"modelType\": 'BB'},\n",
+    "#      {\"displayName\": 'Fish new archi lr0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'tripletMargin': 3, 'displayName': 'adaptive lambda big margin 3 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":1,'tripletMargin': 3, 'displayName':'adaptive lambda bigger margin 3 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda big margin 0.2 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda bigger margin 0.2 alpha 0.5'},\n",
-    "    {'displayName': 'CIFAR alpha 0.1', \"adaptive_alpha\": 0.1},\n",
-    "    {'displayName': 'CIFAR alpha 0.5', \"adaptive_alpha\": 0.5},\n",
-    "    {'displayName': 'CIFAR alpha 0.8', \"adaptive_alpha\": 0.8},\n",
-    "    {'displayName': 'CIFAR lr 0.5', \"learning_rate\": 0.1},\n",
-    "    {'displayName': 'CIFAR lr 0.8', \"learning_rate\": 0.01},\n",
-    "    {'displayName': 'CIFAR lr 0.8', \"learning_rate\": 0.005},\n",
-    "    {'displayName': 'CIFAR no triplet', \"tripletEnabled\": False},\n",
+    "    {'displayName': 'Fish alpha 0.1', \"adaptive_alpha\": 0.1},\n",
+    "    {'displayName': 'Fish alpha 0.5', \"adaptive_alpha\": 0.5},\n",
+    "    {'displayName': 'Fish alpha 0.8', \"adaptive_alpha\": 0.8},\n",
+    "    {'displayName': 'Fish lr 0.1', \"learning_rate\": 0.1},\n",
+    "    {'displayName': 'Fish lr 0.01', \"learning_rate\": 0.01},\n",
+    "    {'displayName': 'Fish lr 0.05', \"learning_rate\": 0.005},\n",
+    "    {'displayName': 'Fish no triplet', \"tripletEnabled\": False},\n",
     "#     {\"adaptive_smoothing\": True,'displayName': 'SGD with triplet'},\n",
     "#      {\"tripletMargin\":0.2, 'displayName': 'small margin 0.2'},\n",
     "#     {\"tripletMargin\":6, 'displayName': 'large margin 6'},\n",
@@ -209,8 +209,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.001, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR new architecture lr0.05', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/fe2fd800d6ea36a9b0acf80fb08aa15785b660a9e36e649cd4af83ad\n"
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish alpha 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/64166d8fa41454b367214676437e28256afe8cd18d661d637880cca7\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish alpha 0.5', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/54ea69374bf971d458bd8dcb95cabdbf97037ddde3583f6d5fafa29c\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.8, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish alpha 0.8', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/b00875994a7e534d15ba11565b57a9121fb514f365c8a5b30583f1d1\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish lr 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/858a992afd440386cc28dca45a6b03ce60cd28476bae2bd0e9f1e607\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish lr 0.01', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/9487ac2535ecbeb43364c31fce816b28080d239b3180b1fa7b2ffe59\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.005, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish lr 0.05', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/adabce7dec9aebc1e0b2bd518e6ce6164a0f0705eb07215cf79b8983\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/b319fdb6a8af2261216f2d3d0ffeb932002db57bbcb14ec935d5b209\n"
      ]
     }
    ],
