--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"CIFAR_phylogeny_8_4_0_KLDiv\"\n",
+    "experimentName = \"CIFAR_phylogeny_tripletloss_new_archi_full2\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -48,21 +48,27 @@
     "    \"augmented\": False,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, # Bigger is more stable (256)\n",
-    "    \"learning_rate\":0.00005, # 0.00005\n",
-    "    \"numOfTrials\":5,\n",
+    "    \"batchSize\": 128, #128, # Bigger is more stable (256)\n",
+    "    \"learning_rate\": 0.05, #0.0003, # 0.00005\n",
+    "    \"numOfTrials\":1,\n",
     "    \"fc_layers\": 1,\n",
+    "    \n",
     "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
-    "    \"lambda\": 0.01,\n",
-    "    \"unsupervisedOnTest\": False,\n",
+    "    \n",
+    "    \"lambda\": 10,#0.01,\n",
+    "\n",
     "    \"tl_model\": \"CIFAR\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "    \n",
-    "    \"adaptive_smoothing\": False,\n",
-    "    \"adaptive_lambda\": 0.015, #optimized for time\n",
-    "    \"adaptive_alpha\": 0.8, #optimized for time\n",
+    "    \"adaptive_smoothing\": True,\n",
+    "    \"adaptive_lambda\": 0.1,#0.015, #optimized for time\n",
+    "    \"adaptive_alpha\": 0.1,#0.8, #optimized for time\n",
     "    \n",
-    "    \"noSpeciesBackprop\": False, \n",
+    "    \"tripletEnabled\": True,\n",
+    "    \"tripletSamples\": 3,\n",
+    "    \"tripletSelector\": \"semihard\",\n",
+    "    \"tripletMargin\": 0.2, #0.2\n",
+    "\n",
     "\n",
     "    \"phylogeny_loss\": False, \n",
     "}\n",
@@ -86,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/CIFAR_HGNN/experiments/CIFAR_phylogeny_8_4_0_KLDiv/params.json'"
+       "'/raid/elhamod/CIFAR_HGNN/experiments/CIFAR_phylogeny_tripletloss_new_archi_full/params.json'"
       ]
      },
      "execution_count": 3,
@@ -98,6 +104,9 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "selected_hyperp_params = [\n",
+    "#     {'adaptive_smoothing': True, },\n",
+    "#     {'adaptive_smoothing': False, 'lambda': 0.01},\n",
+    "#     {'adaptive_smoothing': False, 'lambda': 0},\n",
     "#     {\"training_count\":0.32,\"validation_count\":0.08,},\n",
     "#     {\"training_count\":0.32,\"validation_count\":0.08,'downsample': True, 'takeFromIntermediate': False, 'takeFromIntermediateOutput':-1 },\n",
     "#     {\"training_count\":0.16,\"validation_count\":0.04,'downsample': True, 'takeFromIntermediate': False, 'takeFromIntermediateOutput':-1 },\n",
@@ -139,10 +148,28 @@
     "#     {'batchSize':32, 'learning_rate': 0.00005},\n",
     "#     {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.01},\n",
     "#      {\"modelType\": 'BB'},\n",
+    "#     {\"adaptive_lambda\":0.1, 'tripletMargin': 3, 'displayName': 'adaptive lambda big margin 3 alpha 0.5'},\n",
+    "#     {\"adaptive_lambda\":1,'tripletMargin': 3, 'displayName':'adaptive lambda bigger margin 3 alpha 0.5'},\n",
+    "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda big margin 0.2 alpha 0.5'},\n",
+    "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda bigger margin 0.2 alpha 0.5'},\n",
+    "    {'displayName': 'CIFAR alpha 0.1', \"adaptive_alpha\": 0.1},\n",
+    "    {'displayName': 'CIFAR alpha 0.5', \"adaptive_alpha\": 0.5},\n",
+    "    {'displayName': 'CIFAR alpha 0.8', \"adaptive_alpha\": 0.8},\n",
+    "    {'displayName': 'CIFAR lr 0.1', \"learning_rate\": 0.1},\n",
+    "    {'displayName': 'CIFAR lr 0.01', \"learning_rate\": 0.01},\n",
+    "    {'displayName': 'CIFAR lr 0.05', \"learning_rate\": 0.005},\n",
+    "    {'displayName': 'CIFAR no triplet', \"tripletEnabled\": False},\n",
+    "#     {\"adaptive_smoothing\": True,'displayName': 'SGD with triplet'},\n",
+    "#      {\"tripletMargin\":0.2, 'displayName': 'small margin 0.2'},\n",
+    "#     {\"tripletMargin\":6, 'displayName': 'large margin 6'},\n",
+    "#     {\"tripletMargin\":20, 'displayName': 'very large margin 20'},\n",
+    "#     {\"tripletSelector\":'hard', 'displayName': 'hard'},\n",
+    "#     {'tripletSelector': 'random', 'displayName': 'random'},\n",
+    "    \n",
     "#      {\"modelType\": 'DSN'},\n",
     "#     {\"phylogeny_loss\": False},\n",
     "#     {\"phylogeny_loss\": \"MSE\"},\n",
-    "    {\"phylogeny_loss\": \"KLDiv\"},\n",
+    "#     {\"phylogeny_loss\": \"KLDiv\"},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.7},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.5},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.1},\n",
@@ -182,8 +209,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False, 'phylogeny_loss': 'KLDiv', 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/843245f82691b9ea95cc530cd93dd7d6b3a46cacb99e0ce433b37eab\n"
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR alpha 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/5e5b00bf11016833327df2881bae62079ad90359b1c8cb1f6bbf6a67\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR alpha 0.5', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/77627d2c86690610a3d4adb74b5811cee8b312947291b522b075bce4\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.8, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR alpha 0.8', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/64d39483729e77ca67dece162ee7c71867798974691c52c1f63e6f7b\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR lr 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/828c78ee5614fa6125ec0b93e88955ec40c7f4067a4b7d7825d0aed1\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR lr 0.01', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/0159bea84f92ebaa06466ddb1e24cc2696afd575d8be78813fec3ecb\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.005, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR lr 0.05', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/40a084bb36e25709af2d19600c7206e2423484861d4997c5a6be2cf1\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/e95a3b91b2b1f8fe3b51dd0e163a4270dafb1164c882343a6d43d7eb\n"
      ]
     }
    ],
@@ -192,6 +231,13 @@
     "    print(i)\n",
     "    print(getModelName(i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
