--- a/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"Fish_phylogeny_tripletloss_new_archi_full2\"\n",
+    "experimentName = \"FISH_phylogeny_from_scratch2\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -49,9 +49,12 @@
     "\n",
     "    # training\n",
     "    \"batchSize\": 64, #128, # Bigger is more stable (256)\n",
-    "    \"learning_rate\": 0.01, #0.0003, # 0.00005\n",
+    "    \"learning_rate\": 0.1, #0.01, #0.0003, # 0.00005\n",
     "    \"numOfTrials\":1,\n",
     "    \"fc_layers\": 1,\n",
+    "    \"pretrained\": False,\n",
+    "    \"epochs\": 200,\n",
+    "    \"patience\": -1, # None = \"epochs\"\n",
     "    \n",
     "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
     "    \n",
@@ -92,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/Fish_phylogeny_tripletloss_new_archi_full/params.json'"
+       "'/raid/elhamod/Fish/experiments/FISH_phylogeny_from_scratch2/params.json'"
       ]
      },
      "execution_count": 3,
@@ -152,13 +155,19 @@
     "#     {\"adaptive_lambda\":1,'tripletMargin': 3, 'displayName':'adaptive lambda bigger margin 3 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda big margin 0.2 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda bigger margin 0.2 alpha 0.5'},\n",
-    "    {'displayName': 'Fish alpha 0.1', \"adaptive_alpha\": 0.1},\n",
-    "    {'displayName': 'Fish alpha 0.5', \"adaptive_alpha\": 0.5},\n",
-    "    {'displayName': 'Fish alpha 0.8', \"adaptive_alpha\": 0.8},\n",
-    "    {'displayName': 'Fish lr 0.1', \"learning_rate\": 0.1},\n",
-    "    {'displayName': 'Fish lr 0.01', \"learning_rate\": 0.01},\n",
-    "    {'displayName': 'Fish lr 0.05', \"learning_rate\": 0.005},\n",
-    "    {'displayName': 'Fish no triplet', \"tripletEnabled\": False},\n",
+    "#     {'displayName': 'Fish alpha 0.1', \"adaptive_alpha\": 0.1},\n",
+    "#     {'displayName': 'Fish alpha 0.5', \"adaptive_alpha\": 0.5},\n",
+    "#     {'displayName': 'Fish alpha 0.8', \"adaptive_alpha\": 0.8},\n",
+    "#     {'displayName': 'Fish lr 0.1', \"learning_rate\": 0.1},\n",
+    "#     {'displayName': 'Fish lr 0.01', \"learning_rate\": 0.01},\n",
+    "#     {'displayName': 'Fish lr 0.05', \"learning_rate\": 0.005},\n",
+    "#     {'displayName': 'Fish no triplet', \"tripletEnabled\": False},\n",
+    "#     {'displayName': 'Fish from scratch no triplet', \"tripletEnabled\": False},\n",
+    "#     {'displayName': 'Fish from scratch triplet'},\n",
+    "    {'displayName': 'Fish preresnet from scratch no triplet', \"tl_model\": 'preResNet', \"tripletEnabled\": False},\n",
+    "    {'displayName': 'Fish preresnet from scratch triplet', \"tl_model\": 'preResNet'},\n",
+    "    {'displayName': 'Fish resnet56 from scratch no triplet', \"tl_model\": 'ResNet56', \"tripletEnabled\": False},\n",
+    "    {'displayName': 'Fish resnet56 from scratch triplet', \"tl_model\": 'ResNet56'},\n",
     "#     {\"adaptive_smoothing\": True,'displayName': 'SGD with triplet'},\n",
     "#      {\"tripletMargin\":0.2, 'displayName': 'small margin 0.2'},\n",
     "#     {\"tripletMargin\":6, 'displayName': 'large margin 6'},\n",
@@ -209,20 +218,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish alpha 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/64166d8fa41454b367214676437e28256afe8cd18d661d637880cca7\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish alpha 0.5', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/54ea69374bf971d458bd8dcb95cabdbf97037ddde3583f6d5fafa29c\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.8, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish alpha 0.8', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/b00875994a7e534d15ba11565b57a9121fb514f365c8a5b30583f1d1\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish lr 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/858a992afd440386cc28dca45a6b03ce60cd28476bae2bd0e9f1e607\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish lr 0.01', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/9487ac2535ecbeb43364c31fce816b28080d239b3180b1fa7b2ffe59\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.005, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish lr 0.05', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/adabce7dec9aebc1e0b2bd518e6ce6164a0f0705eb07215cf79b8983\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/b319fdb6a8af2261216f2d3d0ffeb932002db57bbcb14ec935d5b209\n"
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'preResNet', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish preresnet from scratch no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/b083d5cd134e116c889809982c2162efb7e37cfd8d4ff8b4559ad0d7\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'preResNet', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish preresnet from scratch triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/00cb328c41edd49afc5004a3b296f522471872fd3e6d8a0b801600bd\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet56', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish resnet56 from scratch no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/5854f7f6df26d22178152f49e4ae7769b1103f699d32be4fe2b5ca40\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet56', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish resnet56 from scratch triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/794a5c912c09cf7eb28dcd3a75d57d3dab87d801c960345ec9b72801\n"
      ]
     }
    ],
@@ -260,5 +263,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
