--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"CIFAR_phylogeny_tripletloss_new_archi_full2\"\n",
+    "experimentName = \"CIFAR_phylogeny_from_scratch_2\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -45,19 +45,22 @@
     "    \n",
     "    # dataset\n",
     "    \"img_res\": 32, #32, 448\n",
-    "    \"augmented\": False,\n",
+    "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
     "    \"batchSize\": 128, #128, # Bigger is more stable (256)\n",
-    "    \"learning_rate\": 0.05, #0.0003, # 0.00005\n",
+    "    \"learning_rate\": 0.1, # 0.05, #0.0003, # 0.00005\n",
     "    \"numOfTrials\":1,\n",
     "    \"fc_layers\": 1,\n",
+    "    \"pretrained\": False,\n",
+    "    \"epochs\": 200,\n",
+    "    \"patience\": -1, # -1 = \"epochs\"\n",
     "    \n",
     "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
     "    \n",
     "    \"lambda\": 10,#0.01,\n",
     "\n",
-    "    \"tl_model\": \"CIFAR\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
+    "    \"tl_model\": 'ResNet50', #\"CIFAR\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "    \n",
     "    \"adaptive_smoothing\": True,\n",
@@ -68,7 +71,6 @@
     "    \"tripletSamples\": 3,\n",
     "    \"tripletSelector\": \"semihard\",\n",
     "    \"tripletMargin\": 0.2, #0.2\n",
-    "\n",
     "\n",
     "    \"phylogeny_loss\": False, \n",
     "}\n",
@@ -92,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/CIFAR_HGNN/experiments/CIFAR_phylogeny_tripletloss_new_archi_full/params.json'"
+       "'/raid/elhamod/CIFAR_HGNN/experiments/CIFAR_phylogeny_from_scratch_2/params.json'"
       ]
      },
      "execution_count": 3,
@@ -152,13 +154,15 @@
     "#     {\"adaptive_lambda\":1,'tripletMargin': 3, 'displayName':'adaptive lambda bigger margin 3 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda big margin 0.2 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda bigger margin 0.2 alpha 0.5'},\n",
-    "    {'displayName': 'CIFAR alpha 0.1', \"adaptive_alpha\": 0.1},\n",
-    "    {'displayName': 'CIFAR alpha 0.5', \"adaptive_alpha\": 0.5},\n",
-    "    {'displayName': 'CIFAR alpha 0.8', \"adaptive_alpha\": 0.8},\n",
-    "    {'displayName': 'CIFAR lr 0.1', \"learning_rate\": 0.1},\n",
-    "    {'displayName': 'CIFAR lr 0.01', \"learning_rate\": 0.01},\n",
-    "    {'displayName': 'CIFAR lr 0.05', \"learning_rate\": 0.005},\n",
-    "    {'displayName': 'CIFAR no triplet', \"tripletEnabled\": False},\n",
+    "    {'displayName': 'CIFAR preresnet from scratch no triplet', \"tl_model\": 'preResNet', \"tripletEnabled\": False},\n",
+    "    {'displayName': 'CIFAR preresnet from scratch triplet', \"tl_model\": 'preResNet'},\n",
+    "    {'displayName': 'CIFAR resnet56 from scratch no triplet', \"tl_model\": 'ResNet56', \"tripletEnabled\": False},\n",
+    "    {'displayName': 'CIFAR resnet56 from scratch triplet', \"tl_model\": 'ResNet56'},\n",
+    "#     {'displayName': 'CIFAR alpha 0.5', \"adaptive_alpha\": 0.5},\n",
+    "#     {'displayName': 'CIFAR alpha 0.8', \"adaptive_alpha\": 0.8},\n",
+    "#     {'displayName': 'CIFAR lr 0.1', \"learning_rate\": 0.1},\n",
+    "#     {'displayName': 'CIFAR lr 0.01', \"learning_rate\": 0.01},\n",
+    "#     {'displayName': 'CIFAR lr 0.05', \"learning_rate\": 0.005},\n",
     "#     {\"adaptive_smoothing\": True,'displayName': 'SGD with triplet'},\n",
     "#      {\"tripletMargin\":0.2, 'displayName': 'small margin 0.2'},\n",
     "#     {\"tripletMargin\":6, 'displayName': 'large margin 6'},\n",
@@ -209,20 +213,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR alpha 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/5e5b00bf11016833327df2881bae62079ad90359b1c8cb1f6bbf6a67\n",
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR alpha 0.5', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/77627d2c86690610a3d4adb74b5811cee8b312947291b522b075bce4\n",
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.8, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR alpha 0.8', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/64d39483729e77ca67dece162ee7c71867798974691c52c1f63e6f7b\n",
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR lr 0.1', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/828c78ee5614fa6125ec0b93e88955ec40c7f4067a4b7d7825d0aed1\n",
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.01, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR lr 0.01', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/0159bea84f92ebaa06466ddb1e24cc2696afd575d8be78813fec3ecb\n",
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.005, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR lr 0.05', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/40a084bb36e25709af2d19600c7206e2423484861d4997c5a6be2cf1\n",
-      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': False, 'batchSize': 128, 'learning_rate': 0.05, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'CIFAR', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/e95a3b91b2b1f8fe3b51dd0e163a4270dafb1164c882343a6d43d7eb\n"
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'preResNet', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR preresnet from scratch no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/3599eece106c56ef2f5bb246d59ac03857454f60ff22d9529d143466\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'preResNet', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR preresnet from scratch triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/2b242e803e17f2bbe8a295f01e5f9cbad890a01a91c3e969f6ad1226\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'ResNet56', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR resnet56 from scratch no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/7a4a1c81473193b63612a67c7356278837d550c624dcc8f8b6e347c4\n",
+      "{'image_path': 'cifar-100-python', 'suffix': None, 'img_res': 32, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 10, 'tl_model': 'ResNet56', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 3, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'CIFAR resnet56 from scratch triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/e590b0fdf00dd05b30c5bf63ea0f80554e8b4d0cbaa7fe4021b054f4\n"
      ]
     }
    ],
@@ -260,5 +258,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
